--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -33,9 +33,18 @@ sub {
 	color: $g-gray;
 }
 
-img {
+img,p {
 	width:100%;
 	display: block;
+	margin: auto;
+}
+
+a {
+	color: inherit;
+}
+
+code, kbd, pre, samp{
+	font-size: rpx(14);
 }
 
 .relative {
@@ -54,6 +63,12 @@ img {
 .bottom{
 	position: absolute;
 	bottom: 0;
+}
+
+.cover{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .w-100{
